# Aprendizaje-Autom-tico-2025

./: .gitignore  LICENSE  Makefile  README.md  environment.yml  limpieza dataset.ipynb  pyproject.toml
Actividad_clase5/: README.md  Árbol de Decisión y K-NN.ipynb
PARCIAL ML/DATASET importacion de bienes/imports_2024_M/: Leame importaciones.docx  impo_soja_y_sub_productos_mens_2002_2024.xlsx  itotm24.csv  limpieza_impom24.ipynb
analisis_pib/: Analisis regresion lineal PIB paises del mundo.ipynb  __init__.py  dataset.py  features.py  plots.py
analisis_pib/modeling/: predict.py  train.py
data/processed/: pib_limpio.csv
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: Exploracion de datos pib.ipynb  Untitled.ipynb
sistemas_operativos_en_web/: Regrasion_logistica_actividad2_clase4.ipynb
