[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "analisis_pib"
version = "0.0.1"
description = "An\u00e1lisis exploratorio y modelado sobre el PIB de diferentes pa\u00edses del mundo, usando datos del Banco Mundial"
authors = [
  { name = "Ivan_Rodriguez" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["analisis_pib"]
include = ["pyproject.toml", "analisis_pib/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["analisis_pib"]
force-sort-within-sections = true

